--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 <body>
 
   <!-- LOADING -->
-  <div id="loading" class="loading-screen">
+ <div id="loading" class="loading">
     <div class="loading-card">
       <div class="spinner"></div>
       <h2>Kid IEQ 2026</h2>
